--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -18,6 +19,12 @@
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "eslint": "7.19.0",
     "eslint-config-next": "12.0.7",
+    "prettier": "^2.5.1",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-order-config-standard": "^0.1.3",
     "typescript": "^4.5.4"
   }
 }
