feat: add fonts, ignoring js/ts files for stylelint

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,5 +5,5 @@
     "indentation": ["tab"],
     "color-hex-case": "upper"
   },
-  "ignoreFiles": [".eslintrc.js", "**/*.tsx", "**/*.ts", "**/*.js"]
+  "ignoreFiles": [".eslintrc.js", ".next", "**/*.tsx", "**/*.ts", "**/*.js"]
 }
