--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -26,6 +27,7 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-order-config-standard": "^0.1.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
