--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,5 +5,12 @@
     "indentation": ["tab"],
     "color-hex-case": "upper"
   },
-  "ignoreFiles": [".eslintrc.js", ".next", "**/*.tsx", "**/*.ts", "**/*.js"]
+  "ignoreFiles": [
+    ".eslintrc.js",
+    ".next",
+    "**/*.tsx",
+    "**/*.ts",
+    "**/*.js",
+    "**/*.svg"
+  ]
 }
