--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "eslint": "7.19.0",
     "eslint-config-next": "12.0.7",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "prettier-stylelint": "^0.4.2",
     "stylelint": "^14.2.0",
