--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,7 +3,8 @@
   "plugins": ["stylelint-order"],
   "rules": {
     "indentation": ["tab"],
-    "color-hex-case": "upper"
+    "color-hex-case": "upper",
+    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$|^ant-|^mz-"
   },
   "ignoreFiles": [
     ".eslintrc.js",
