--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,7 +4,9 @@
   "rules": {
     "indentation": ["tab"],
     "color-hex-case": "upper",
-    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$|^ant-|^mz-"
+    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$|^ant-|^mz-",
+    "declaration-block-no-shorthand-property-overrides": null,
+    "declaration-block-no-redundant-longhand-properties": null
   },
   "ignoreFiles": [
     ".eslintrc.js",
