--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stylelint": "stylelint \"**/*.css\" --fix"
+    "stylelint": "stylelint \"**/*.css\" --fix",
+    "json-server": "json-server --watch --port=8080 mock/db.json"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -23,6 +25,7 @@
     "eslint": "7.19.0",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "json-server": "^0.17.0",
     "prettier": "^2.5.1",
     "prettier-stylelint": "^0.4.2",
     "stylelint": "^14.2.0",
